# operationaldashboard

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  python-fastapi-ci.yml
api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py  script.py.mako
api/app/: auth.py  config.py  db.py  deps.py  main.py  middleware.py  models.py  prom.py  schemas.py  settings.py
api/app/routers/: alerts_routes.py  auth_routes.py  forecast_routes.py  product_routes.py  sales_routes.py  stats_routes.py  tenant_routes.py
api/app/services/: alerts.py  anomaly.py  forecasting.py
api/app/utils/: deps.py  s3.py
api/operational_dashboard_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/: cloudwatch.tf  ecs.tf  main.tf  outputs.tf  rds.tf  route53_acm_lb.tf  s3.tf  sqs.tf  variables.tf  vpc.tf
web/: Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
web/_backup_drag/src/: App.tsx  index.css
web/_backup_drag/src/components/: KpiCard.tsx  LineChart.tsx  UploadCsv.tsx
web/_backup_drag/src/lib/: api.ts
web/_backup_drag/src/pages/: Dashboard.tsx
web/src/: App.tsx  api.ts  auth.ts  index.css
web/src/components/: AlertsPanel.tsx  Badges.tsx  Dashboard.tsx  ForecastChart.tsx  LoginForm.tsx  Nav.tsx  S3Uploader.tsx  SalesUploader.tsx  UploadCsv.tsx
web/src/lib/: api.ts  types.ts
web/src/pages/: Dashboard.tsx  Forecasts.tsx  Sales.tsx
worker/: Dockerfile  worker.py
