# api/pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operational-dashboard-api"
version = "0.1.0"
description = "API for Operational Dashboard"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "statsmodels>=0.14.2",
  "prometheus-client>=0.20.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.2",
  "pydantic[email]>=2.7",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "boto3>=1.35"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
